--- a/proto/buf.gen.yaml
+++ b/proto/buf.gen.yaml
@@ -8,3 +8,8 @@ plugins:
     out: gen/
     opt:
       - paths=source_relative
+  - name: grpc-gateway
+    out: gen/
+    opt:
+      - paths=source_relative
+      - generate_unbound_methods=true
